--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
-    "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.42",
@@ -23,8 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "json:server": "json-server --watch db.json"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
